aggiunta componente "TheFooter"

--- a/src/assets/scss/general.scss
+++ b/src/assets/scss/general.scss
@@ -2,6 +2,7 @@
     font-family: Avenir, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    height: 100vh;
 }
 
 .content{
@@ -13,3 +14,4 @@
         font-size: 1.3rem;
     }
 }
+
