--- a/src/assets/scss/general.scss
+++ b/src/assets/scss/general.scss
@@ -2,16 +2,17 @@
     font-family: Avenir, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    height: 100vh;
+    
 }
 
-.content{
-    background-color: black;
-    
+.jumbotron{
+    height: 450px;
+    padding-bottom: 2rem;
 
-    & .content-text{
-        color: white;
-        font-size: 1.3rem;
+    & img{
+        width: 100%;
+        object-fit: cover;
+        object-position: top;
+        height:100%
     }
 }
-
