creazione 'FooterBanner' e pulsanti

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,2 +1,4 @@
+
 @import "~bootstrap/scss/bootstrap";
-@import "./general"
+@import "./general";
+@import 'https://fonts.googleapis.com/css2?family=Asap+Condensed:ital,wght@0,400;1,600&display=swap'
