--- a/src/assets/scss/general.scss
+++ b/src/assets/scss/general.scss
@@ -1,12 +1,15 @@
+
 #app {
-    font-family: Avenir, Helvetica, Arial, sans-serif;
+    font-family: 'Asap Condensed', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     
 }
 
+
 .jumbotron{
     height: 450px;
+    max-height: 450px;
     padding-bottom: 2rem;
 
     & img{
@@ -15,4 +18,14 @@
         object-position: top;
         height:100%
     }
+
+}
+
+.label-current-series{
+    padding: .3rem 1rem;
+    color:white;
+    background-color: #0282F9;
+    position: absolute;
+    top: -40px;
+    left: -20px;
 }
